grammar.output
Terminals unused in grammar

   RESERVED


State 51 conflicts: 1 shift/reduce
State 121 conflicts: 1 shift/reduce
State 122 conflicts: 9 reduce/reduce
State 188 conflicts: 1 shift/reduce
State 253 conflicts: 1 shift/reduce
State 254 conflicts: 1 shift/reduce
State 255 conflicts: 1 shift/reduce
State 256 conflicts: 1 shift/reduce
State 303 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Literal: NULLTOKEN
    2        | TRUETOKEN
    3        | FALSETOKEN
    4        | NUMBER
    5        | STRING
    6        | '/'
    7        | DIVEQUAL

    8 PrimaryExpr: THIS
    9            | IDENT
   10            | Literal
   11            | ArrayLiteral
   12            | '(' Expr ')'
   13            | '{' '}'
   14            | '{' PropertyNameAndValueList '}'

   15 ArrayLiteral: '[' ElisionOpt ']'
   16             | '[' ElementList ']'
   17             | '[' ElementList ',' ElisionOpt ']'

   18 ElementList: ElisionOpt AssignmentExpr
   19            | ElementList ',' ElisionOpt AssignmentExpr

   20 ElisionOpt: /* empty */
   21           | Elision

   22 Elision: ','
   23        | Elision ','

   24 PropertyNameAndValueList: PropertyName ':' AssignmentExpr
   25                         | PropertyNameAndValueList ',' PropertyName ':' AssignmentExpr

   26 PropertyName: IDENT
   27             | STRING
   28             | NUMBER

   29 MemberExpr: PrimaryExpr
   30           | FunctionExpr
   31           | MemberExpr '[' Expr ']'
   32           | MemberExpr '.' IDENT
   33           | NEW MemberExpr Arguments

   34 NewExpr: MemberExpr
   35        | NEW NewExpr

   36 CallExpr: MemberExpr Arguments
   37         | CallExpr Arguments
   38         | CallExpr '[' Expr ']'
   39         | CallExpr '.' IDENT

   40 Arguments: '(' ')'
   41          | '(' ArgumentList ')'

   42 ArgumentList: AssignmentExpr
   43             | ArgumentList ',' AssignmentExpr

   44 LeftHandSideExpr: NewExpr
   45                 | CallExpr

   46 PostfixExpr: LeftHandSideExpr
   47            | LeftHandSideExpr PLUSPLUS
   48            | LeftHandSideExpr MINUSMINUS

   49 UnaryExpr: PostfixExpr
   50          | DELETE UnaryExpr
   51          | VOID UnaryExpr
   52          | TYPEOF UnaryExpr
   53          | PLUSPLUS UnaryExpr
   54          | AUTOPLUSPLUS UnaryExpr
   55          | MINUSMINUS UnaryExpr
   56          | AUTOMINUSMINUS UnaryExpr
   57          | '+' UnaryExpr
   58          | '-' UnaryExpr
   59          | '~' UnaryExpr
   60          | '!' UnaryExpr

   61 MultiplicativeExpr: UnaryExpr
   62                   | MultiplicativeExpr '*' UnaryExpr
   63                   | MultiplicativeExpr '/' UnaryExpr
   64                   | MultiplicativeExpr '%' UnaryExpr

   65 AdditiveExpr: MultiplicativeExpr
   66             | AdditiveExpr '+' MultiplicativeExpr
   67             | AdditiveExpr '-' MultiplicativeExpr

   68 ShiftExpr: AdditiveExpr
   69          | ShiftExpr LSHIFT AdditiveExpr
   70          | ShiftExpr RSHIFT AdditiveExpr
   71          | ShiftExpr URSHIFT AdditiveExpr

   72 RelationalExpr: ShiftExpr
   73               | RelationalExpr '<' ShiftExpr
   74               | RelationalExpr '>' ShiftExpr
   75               | RelationalExpr LE ShiftExpr
   76               | RelationalExpr GE ShiftExpr
   77               | RelationalExpr INSTANCEOF ShiftExpr
   78               | RelationalExpr IN ShiftExpr

   79 EqualityExpr: RelationalExpr
   80             | EqualityExpr EQEQ RelationalExpr
   81             | EqualityExpr NE RelationalExpr
   82             | EqualityExpr STREQ RelationalExpr
   83             | EqualityExpr STRNEQ RelationalExpr

   84 BitwiseANDExpr: EqualityExpr
   85               | BitwiseANDExpr '&' EqualityExpr

   86 BitwiseXORExpr: BitwiseANDExpr
   87               | BitwiseXORExpr '^' BitwiseANDExpr

   88 BitwiseORExpr: BitwiseXORExpr
   89              | BitwiseORExpr '|' BitwiseXORExpr

   90 LogicalANDExpr: BitwiseORExpr
   91               | LogicalANDExpr AND BitwiseORExpr

   92 LogicalORExpr: LogicalANDExpr
   93              | LogicalORExpr OR LogicalANDExpr

   94 ConditionalExpr: LogicalORExpr
   95                | LogicalORExpr '?' AssignmentExpr ':' AssignmentExpr

   96 AssignmentExpr: ConditionalExpr
   97               | LeftHandSideExpr AssignmentOperator AssignmentExpr

   98 AssignmentOperator: '='
   99                   | PLUSEQUAL
  100                   | MINUSEQUAL
  101                   | MULTEQUAL
  102                   | DIVEQUAL
  103                   | LSHIFTEQUAL
  104                   | RSHIFTEQUAL
  105                   | URSHIFTEQUAL
  106                   | ANDEQUAL
  107                   | XOREQUAL
  108                   | OREQUAL
  109                   | MODEQUAL

  110 Expr: AssignmentExpr
  111     | Expr ',' AssignmentExpr

  112 Statement: Block
  113          | VariableStatement
  114          | EmptyStatement
  115          | ExprStatement
  116          | IfStatement
  117          | IterationStatement
  118          | ContinueStatement
  119          | BreakStatement
  120          | ReturnStatement
  121          | WithStatement
  122          | SwitchStatement
  123          | LabelledStatement
  124          | ThrowStatement
  125          | TryStatement

  126 Block: '{' '}'
  127      | '{' SourceElements '}'

  128 StatementList: Statement
  129              | StatementList Statement

  130 VariableStatement: VAR VariableDeclarationList ';'
  131                  | VAR VariableDeclarationList error

  132 VariableDeclarationList: VariableDeclaration
  133                        | VariableDeclarationList ',' VariableDeclaration

  134 VariableDeclaration: IDENT
  135                    | IDENT Initializer

  136 Initializer: '=' AssignmentExpr

  137 EmptyStatement: ';'

  138 ExprStatement: Expr ';'
  139              | Expr error

  140 IfStatement: IF '(' Expr ')' Statement
  141            | IF '(' Expr ')' Statement ELSE Statement

  142 IterationStatement: DO Statement WHILE '(' Expr ')'
  143                   | WHILE '(' Expr ')' Statement
  144                   | FOR '(' ExprOpt ';' ExprOpt ';' ExprOpt ')' Statement
  145                   | FOR '(' VAR VariableDeclarationList ';' ExprOpt ';' ExprOpt ')' Statement
  146                   | FOR '(' LeftHandSideExpr IN Expr ')' Statement
  147                   | FOR '(' VAR IDENT IN Expr ')' Statement
  148                   | FOR '(' VAR IDENT Initializer IN Expr ')' Statement

  149 ExprOpt: /* empty */
  150        | Expr

  151 ContinueStatement: CONTINUE ';'
  152                  | CONTINUE error
  153                  | CONTINUE IDENT ';'
  154                  | CONTINUE IDENT error

  155 BreakStatement: BREAK ';'
  156               | BREAK error
  157               | BREAK IDENT ';'
  158               | BREAK IDENT error

  159 ReturnStatement: RETURN ';'
  160                | RETURN error
  161                | RETURN Expr ';'
  162                | RETURN Expr error

  163 WithStatement: WITH '(' Expr ')' Statement

  164 SwitchStatement: SWITCH '(' Expr ')' CaseBlock

  165 CaseBlock: '{' CaseClausesOpt '}'
  166          | '{' CaseClausesOpt DefaultClause CaseClausesOpt '}'

  167 CaseClausesOpt: /* empty */
  168               | CaseClauses

  169 CaseClauses: CaseClause
  170            | CaseClauses CaseClause

  171 CaseClause: CASE Expr ':'
  172           | CASE Expr ':' StatementList

  173 DefaultClause: DEFAULT ':'
  174              | DEFAULT ':' StatementList

  175 LabelledStatement: IDENT ':' Statement

  176 ThrowStatement: THROW Expr ';'

  177 TryStatement: TRY Block Catch
  178             | TRY Block Finally
  179             | TRY Block Catch Finally

  180 Catch: CATCH '(' IDENT ')' Block

  181 Finally: FINALLY Block

  182 FunctionDeclaration: FUNCTION IDENT '(' ')' FunctionBody
  183                    | FUNCTION IDENT '(' FormalParameterList ')' FunctionBody

  184 FunctionExpr: FUNCTION '(' ')' FunctionBody
  185             | FUNCTION '(' FormalParameterList ')' FunctionBody

  186 FormalParameterList: IDENT
  187                    | FormalParameterList ',' IDENT

  188 FunctionBody: '{' '}'
  189             | '{' SourceElements '}'

  190 Program: /* empty */
  191        | SourceElements

  192 SourceElements: SourceElement
  193               | SourceElements SourceElement

  194 SourceElement: Statement
  195              | FunctionDeclaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 60
'%' (37) 64
'&' (38) 85
'(' (40) 12 40 41 140 141 142 143 144 145 146 147 148 163 164 180 182
    183 184 185
')' (41) 12 40 41 140 141 142 143 144 145 146 147 148 163 164 180 182
    183 184 185
'*' (42) 62
'+' (43) 57 66
',' (44) 17 19 22 23 25 43 111 133 187
'-' (45) 58 67
'.' (46) 32 39
'/' (47) 6 63
':' (58) 24 25 95 171 172 173 174 175
';' (59) 130 137 138 144 145 151 153 155 157 159 161 176
'<' (60) 73
'=' (61) 98 136
'>' (62) 74
'?' (63) 95
'[' (91) 15 16 17 31 38
']' (93) 15 16 17 31 38
'^' (94) 87
'{' (123) 13 14 126 127 165 166 188 189
'|' (124) 89
'}' (125) 13 14 126 127 165 166 188 189
'~' (126) 59
error (256) 131 139 152 154 156 158 160 162
NULLTOKEN (258) 1
TRUETOKEN (259) 2
FALSETOKEN (260) 3
BREAK (261) 155 156 157 158
CASE (262) 171 172
DEFAULT (263) 173 174
FOR (264) 144 145 146 147 148
NEW (265) 33 35
VAR (266) 130 131 145 147 148
CONTINUE (267) 151 152 153 154
FUNCTION (268) 182 183 184 185
RETURN (269) 159 160 161 162
VOID (270) 51
DELETE (271) 50
IF (272) 140 141
THIS (273) 8
DO (274) 142
WHILE (275) 142 143
ELSE (276) 141
IN (277) 78 146 147 148
INSTANCEOF (278) 77
TYPEOF (279) 52
SWITCH (280) 164
WITH (281) 163
RESERVED (282)
THROW (283) 176
TRY (284) 177 178 179
CATCH (285) 180
FINALLY (286) 181
EQEQ (287) 80
NE (288) 81
STREQ (289) 82
STRNEQ (290) 83
LE (291) 75
GE (292) 76
OR (293) 93
AND (294) 91
PLUSPLUS (295) 47 53
MINUSMINUS (296) 48 55
LSHIFT (297) 69
RSHIFT (298) 70
URSHIFT (299) 71
PLUSEQUAL (300) 99
MINUSEQUAL (301) 100
MULTEQUAL (302) 101
DIVEQUAL (303) 7 102
LSHIFTEQUAL (304) 103
RSHIFTEQUAL (305) 104
URSHIFTEQUAL (306) 105
ANDEQUAL (307) 106
MODEQUAL (308) 109
XOREQUAL (309) 107
OREQUAL (310) 108
NUMBER (311) 4 28
STRING (312) 5 27
IDENT (313) 9 26 32 39 134 135 147 148 153 154 157 158 175 180 182
    183 186 187
AUTOPLUSPLUS (314) 54
AUTOMINUSMINUS (315) 56


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
Literal (86)
    on left: 1 2 3 4 5 6 7, on right: 10
PrimaryExpr (87)
    on left: 8 9 10 11 12 13 14, on right: 29
ArrayLiteral (88)
    on left: 15 16 17, on right: 11
ElementList (89)
    on left: 18 19, on right: 16 17 19
ElisionOpt (90)
    on left: 20 21, on right: 15 17 18 19
Elision (91)
    on left: 22 23, on right: 21 23
PropertyNameAndValueList (92)
    on left: 24 25, on right: 14 25
PropertyName (93)
    on left: 26 27 28, on right: 24 25
MemberExpr (94)
    on left: 29 30 31 32 33, on right: 31 32 33 34 36
NewExpr (95)
    on left: 34 35, on right: 35 44
CallExpr (96)
    on left: 36 37 38 39, on right: 37 38 39 45
Arguments (97)
    on left: 40 41, on right: 33 36 37
ArgumentList (98)
    on left: 42 43, on right: 41 43
LeftHandSideExpr (99)
    on left: 44 45, on right: 46 47 48 97 146
PostfixExpr (100)
    on left: 46 47 48, on right: 49
UnaryExpr (101)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60, on right: 50 51 52
    53 54 55 56 57 58 59 60 61 62 63 64
MultiplicativeExpr (102)
    on left: 61 62 63 64, on right: 62 63 64 65 66 67
AdditiveExpr (103)
    on left: 65 66 67, on right: 66 67 68 69 70 71
ShiftExpr (104)
    on left: 68 69 70 71, on right: 69 70 71 72 73 74 75 76 77 78
RelationalExpr (105)
    on left: 72 73 74 75 76 77 78, on right: 73 74 75 76 77 78 79 80
    81 82 83
EqualityExpr (106)
    on left: 79 80 81 82 83, on right: 80 81 82 83 84 85
BitwiseANDExpr (107)
    on left: 84 85, on right: 85 86 87
BitwiseXORExpr (108)
    on left: 86 87, on right: 87 88 89
BitwiseORExpr (109)
    on left: 88 89, on right: 89 90 91
LogicalANDExpr (110)
    on left: 90 91, on right: 91 92 93
LogicalORExpr (111)
    on left: 92 93, on right: 93 94 95
ConditionalExpr (112)
    on left: 94 95, on right: 96
AssignmentExpr (113)
    on left: 96 97, on right: 18 19 24 25 42 43 95 97 110 111 136
AssignmentOperator (114)
    on left: 98 99 100 101 102 103 104 105 106 107 108 109, on right:
    97
Expr (115)
    on left: 110 111, on right: 12 31 38 111 138 139 140 141 142 143
    146 147 148 150 161 162 163 164 171 172 176
Statement (116)
    on left: 112 113 114 115 116 117 118 119 120 121 122 123 124 125,
    on right: 128 129 140 141 142 143 144 145 146 147 148 163 175 194
Block (117)
    on left: 126 127, on right: 112 177 178 179 180 181
StatementList (118)
    on left: 128 129, on right: 129 172 174
VariableStatement (119)
    on left: 130 131, on right: 113
VariableDeclarationList (120)
    on left: 132 133, on right: 130 131 133 145
VariableDeclaration (121)
    on left: 134 135, on right: 132 133
Initializer (122)
    on left: 136, on right: 135 148
EmptyStatement (123)
    on left: 137, on right: 114
ExprStatement (124)
    on left: 138 139, on right: 115
IfStatement (125)
    on left: 140 141, on right: 116
IterationStatement (126)
    on left: 142 143 144 145 146 147 148, on right: 117
ExprOpt (127)
    on left: 149 150, on right: 144 145
ContinueStatement (128)
    on left: 151 152 153 154, on right: 118
BreakStatement (129)
    on left: 155 156 157 158, on right: 119
ReturnStatement (130)
    on left: 159 160 161 162, on right: 120
WithStatement (131)
    on left: 163, on right: 121
SwitchStatement (132)
    on left: 164, on right: 122
CaseBlock (133)
    on left: 165 166, on right: 164
CaseClausesOpt (134)
    on left: 167 168, on right: 165 166
CaseClauses (135)
    on left: 169 170, on right: 168 170
CaseClause (136)
    on left: 171 172, on right: 169 170
DefaultClause (137)
    on left: 173 174, on right: 166
LabelledStatement (138)
    on left: 175, on right: 123
ThrowStatement (139)
    on left: 176, on right: 124
TryStatement (140)
    on left: 177 178 179, on right: 125
Catch (141)
    on left: 180, on right: 177 179
Finally (142)
    on left: 181, on right: 178 179
FunctionDeclaration (143)
    on left: 182 183, on right: 195
FunctionExpr (144)
    on left: 184 185, on right: 30
FormalParameterList (145)
    on left: 186 187, on right: 183 185 187
FunctionBody (146)
    on left: 188 189, on right: 182 183 184 185
Program (147)
    on left: 190 191, on right: 0
SourceElements (148)
    on left: 192 193, on right: 127 189 191 193
SourceElement (149)
    on left: 194 195, on right: 192 193


state 0

    0 $accept: . Program $end
    1 Literal: . NULLTOKEN
    2        | . TRUETOKEN
    3        | . FALSETOKEN
    4        | . NUMBER
    5        | . STRING
    6        | . '/'
    7        | . DIVEQUAL
    8 PrimaryExpr: . THIS
    9            | . IDENT
   10            | . Literal
   11            | . ArrayLiteral
   12            | . '(' Expr ')'
   13            | . '{' '}'
   14            | . '{' PropertyNameAndValueList '}'
   15 ArrayLiteral: . '[' ElisionOpt ']'
   16             | . '[' ElementList ']'
   17             | . '[' ElementList ',' ElisionOpt ']'
   29 MemberExpr: . PrimaryExpr
   30           | . FunctionExpr
   31           | . MemberExpr '[' Expr ']'
   32           | . MemberExpr '.' IDENT
   33           | . NEW MemberExpr Arguments
   34 NewExpr: . MemberExpr
   35        | . NEW NewExpr
   36 CallExpr: . MemberExpr Arguments
   37         | . CallExpr Arguments
   38         | . CallExpr '[' Expr ']'
   39         | . CallExpr '.' IDENT
   44 LeftHandSideExpr: . NewExpr
   45                 | . CallExpr
   46 PostfixExpr: . LeftHandSideExpr
   47            | . LeftHandSideExpr PLUSPLUS
   48            | . LeftHandSideExpr MINUSMINUS
   49 UnaryExpr: . PostfixExpr
   50          | . DELETE UnaryExpr
   51          | . VOID UnaryExpr
   52          | . TYPEOF UnaryExpr
   53          | . PLUSPLUS UnaryExpr
   54          | . AUTOPLUSPLUS UnaryExpr
   55          | . MINUSMINUS UnaryExpr
   56          | . AUTOMINUSMINUS UnaryExpr
   57          | . '+' UnaryExpr
   58          | . '-' UnaryExpr
   59          | . '~' UnaryExpr
   60          | . '!' UnaryExpr
   61 MultiplicativeExpr: . UnaryExpr
   62                   | . MultiplicativeExpr '*' UnaryExpr
   63                   | . MultiplicativeExpr '/' UnaryExpr
   64                   | . MultiplicativeExpr '%' UnaryExpr
   65 AdditiveExpr: . MultiplicativeExpr
   66             | . AdditiveExpr '+' MultiplicativeExpr
   67             | . AdditiveExpr '-' MultiplicativeExpr
   68 ShiftExpr: . AdditiveExpr
   69          | . ShiftExpr LSHIFT AdditiveExpr
   70          | . ShiftExpr RSHIFT AdditiveExpr
   71          | . ShiftExpr URSHIFT AdditiveExpr
   72 RelationalExpr: . ShiftExpr
   73               | . RelationalExpr '<' ShiftExpr
   74               | . RelationalExpr '>' ShiftExpr
   75               | . RelationalExpr LE ShiftExpr
   76               | . RelationalExpr GE ShiftExpr
   77               | . RelationalExpr INSTANCEOF ShiftExpr
   78               | . RelationalExpr IN ShiftExpr
   79 EqualityExpr: . RelationalExpr
   80             | . EqualityExpr EQEQ RelationalExpr
   81             | . EqualityExpr NE RelationalExpr
   82             | . EqualityExpr STREQ RelationalExpr
   83             | . EqualityExpr STRNEQ RelationalExpr
   84 BitwiseANDExpr: . EqualityExpr
   85               | . BitwiseANDExpr '&' EqualityExpr
   86 BitwiseXORExpr: . BitwiseANDExpr
   87               | . BitwiseXORExpr '^' BitwiseANDExpr
   88 BitwiseORExpr: . BitwiseXORExpr
   89              | . BitwiseORExpr '|' BitwiseXORExpr
   90 LogicalANDExpr: . BitwiseORExpr
   91               | . LogicalANDExpr AND BitwiseORExpr
   92 LogicalORExpr: . LogicalANDExpr
   93              | . LogicalORExpr OR LogicalANDExpr
   94 ConditionalExpr: . LogicalORExpr
   95                | . LogicalORExpr '?' AssignmentExpr ':' AssignmentExpr
   96 AssignmentExpr: . ConditionalExpr
   97               | . LeftHandSideExpr AssignmentOperator AssignmentExpr
  110 Expr: . AssignmentExpr
  111     | . Expr ',' AssignmentExpr
  112 Statement: . Block
  113          | . VariableStatement
  114          | . EmptyStatement
  115          | . ExprStatement
  116          | . IfStatement
  117          | . IterationStatement
  118          | . ContinueStatement
  119          | . BreakStatement
  120          | . ReturnStatement
  121          | . WithStatement
  122          | . SwitchStatement
  123          | . LabelledStatement
  124          | . ThrowStatement
  125          | . TryStatement
  126 Block: . '{' '}'
  127      | . '{' SourceElements '}'
  130 VariableStatement: . VAR VariableDeclarationList ';'
  131                  | . VAR VariableDeclarationList error
  137 EmptyStatement: . ';'
  138 ExprStatement: . Expr ';'
  139              | . Expr error
  140 IfStatement: . IF '(' Expr ')' Statement
  141            | . IF '(' Expr ')' Statement ELSE Statement
  142 IterationStatement: . DO Statement WHILE '(' Expr ')'
  143                   | . WHILE '(' Expr ')' Statement
  144                   | . FOR '(' ExprOpt ';' ExprOpt ';' ExprOpt ')' Statement
  145                   | . FOR '(' VAR VariableDeclarationList ';' ExprOpt ';' ExprOpt ')' Statement
  146                   | . FOR '(' LeftHandSideExpr IN Expr ')' Statement
  147                   | . FOR '(' VAR IDENT IN Expr ')' Statement
  148                   | . FOR '(' VAR IDENT Initializer IN Expr ')' Statement
  151 ContinueStatement: . CONTINUE ';'
  152                  | . CONTINUE error
  153                  | . CONTINUE IDENT ';'
  154                  | . CONTINUE IDENT error
  155 BreakStatement: . BREAK ';'
  156               | . BREAK error
  157               | . BREAK IDENT ';'
  158               | . BREAK IDENT error
  159 ReturnStatement: . RETURN ';'
  160                | . RETURN error
  161                | . RETURN Expr ';'
  162                | . RETURN Expr error
  163 WithStatement: . WITH '(' Expr ')' Statement
  164 SwitchStatement: . SWITCH '(' Expr ')' CaseBlock
  175 LabelledStatement: . IDENT ':' Statement
  176 ThrowStatement: . THROW Expr ';'
  177 TryStatement: . TRY Block Catch
  178             | . TRY Block Finally
  179             | . TRY Block Catch Finally
  182 FunctionDeclaration: . FUNCTION IDENT '(' ')' FunctionBody
  183                    | . FUNCTION IDENT '(' FormalParameterList ')' FunctionBody
  184 FunctionExpr: . FUNCTION '(' ')' FunctionBody
  185             | . FUNCTION '(' FormalParameterList ')' FunctionBody
  190 Program: .  [$end]
  191        | . SourceElements
  192 SourceElements: . SourceElement
  193               | . SourceElements SourceElement
  194 SourceElement: . Statement
  195              | . FunctionDeclaration

    NULLTOKEN       shift, and go to state 1
    TRUETOKEN       shift, and go to state 2
    FALSETOKEN      shift, and go to state 3
    BREAK           shift, and go to state 4
    FOR             shift, and go to state 5
    NEW             shift, and go to state 6
    VAR             shift, and go to state 7
    CONTINUE        shift, and go to state 8
    FUNCTION        shift, and go to state 9
    RETURN          shift, and go to state 10
    VOID            shift, and go to state 11
    DELETE          shift, and go to state 12
    IF              shift, and go to state 13
    THIS            shift, and go to state 14
    DO              shift, and go to state 15
    WHILE           shift, and go to state 16
    TYPEOF          shift, and go to state 17
    SWITCH          shift, and go to state 18
    WITH            shift, and go to state 19
    THROW           shift, and go to state 20
    TRY             shift, and go to state 21
    PLUSPLUS        shift, and go to state 22
    MINUSMINUS      shift, and go to state 23
    DIVEQUAL        shift, and go to state 24
    NUMBER          shift, and go to state 25
    STRING          shift, and go to state 26
    IDENT           shift, and go to state 27
    AUTOPLUSPLUS    shift, and go to state 28
    AUTOMINUSMINUS  shift, and go to state 29
    '/'             shift, and go to state 30
    '('             shift, and go to state 31
    '{'             shift, and go to state 32
    '['             shift, and go to state 33
    '+'             shift, and go to state 34
    '-'             shift, and go to state 35
    '~'             shift, and go to state 36
    '!'             shift, and go to state 37
    ';'             shift, and go to state 38

    $default  reduce using rule 190 (Program)

    Literal              go to state 39
    PrimaryExpr          go to state 40
    ArrayLiteral         go to state 41
    MemberExpr           go to state 42
    NewExpr              go to state 43
    CallExpr             go to state 44
    LeftHandSideExpr     go to state 45
    PostfixExpr          go to state 46
    UnaryExpr            go to state 47
    MultiplicativeExpr   go to state 48
    AdditiveExpr         go to state 49
    ShiftExpr            go to state 50
    RelationalExpr       go to state 51
    EqualityExpr         go to state 52
    BitwiseANDExpr       go to state 53
    BitwiseXORExpr       go to state 54
    BitwiseORExpr        go to state 55
    LogicalANDExpr       go to state 56
    LogicalORExpr        go to state 57
    ConditionalExpr      go to state 58
    AssignmentExpr       go to state 59
    Expr                 go to state 60
    Statement            go to state 61
    Block                go to state 62
    VariableStatement    go to state 63
    EmptyStatement       go to state 64
    ExprStatement        go to state 65
    IfStatement          go to state 66
    IterationStatement   go to state 67
    ContinueStatement    go to state 68
    BreakStatement       go to state 69
    ReturnStatement      go to state 70
    WithStatement        go to state 71
    SwitchStatement      go to state 72
    LabelledStatement    go to state 73
    ThrowStatement       go to state 74
    TryStatement         go to state 75
    FunctionDeclaration  go to state 76
    FunctionExpr         go to state 77
    Program              go to state 78
    SourceElements       go to state 79
    SourceElement        go to state 80


state 1

    1 Literal: NULLTOKEN .

    $default  reduce using rule 1 (Literal)


state 2

    2 Literal: TRUETOKEN .

    $default  reduce using rule 2 (Literal)


state 3

    3 Literal: FALSETOKEN .

    $default  reduce using rule 3 (Literal)


state 4

  155 BreakStatement: BREAK . ';'
  156               | BREAK . error
  157               | BREAK . IDENT ';'
  158               | BREAK . IDENT error

    error  shift, and go to state 81
    IDENT  shift, and go to state 82
    ';'    shift, and go to state 83


state 5

  144 IterationStatement: FOR . '(' ExprOpt ';' ExprOpt ';' ExprOpt ')' Statement
  145                   | FOR . '(' VAR VariableDeclarationList ';' ExprOpt ';' ExprOpt ')' Statement
  146                   | FOR . '(' LeftHandSideExpr IN Expr ')' Statement
  147                   | FOR . '(' VAR IDENT IN Expr ')' Statement
  148                   | FOR . '(' VAR IDENT Initializer IN Expr ')' Statement

    '('  shift, and go to state 84


state 6

    1 Literal: . NULLTOKEN
    2        | . TRUETOKEN
    3        | . FALSETOKEN
    4        | . NUMBER
    5        | . STRING
    6        | . '/'
    7        | . DIVEQUAL
    8 PrimaryExpr: . THIS
    9            | . IDENT
   10            | . Literal
   11            | . ArrayLiteral
   12            | . '(' Expr ')'
   13            | . '{' '}'
   14            | . '{' PropertyNameAndValueList '}'
   15 ArrayLiteral: . '[' ElisionOpt ']'
   16             | . '[' ElementList ']'
   17             | . '[' ElementList ',' ElisionOpt ']'
   29 MemberExpr: . PrimaryExpr
   30           | . FunctionExpr
   31           | . MemberExpr '[' Expr ']'
   32           | . MemberExpr '.' IDENT
   33           | . NEW MemberExpr Arguments
   33           | NEW . MemberExpr Arguments
   34 NewExpr: . MemberExpr
   35        | . NEW NewExpr
   35        | NEW . NewExpr
  184 FunctionExpr: . FUNCTION '(' ')' FunctionBody
  185             | . FUNCTION '(' FormalParameterList ')' FunctionBody

    NULLTOKEN   shift, and go to state 1
    TRUETOKEN   shift, and go to state 2
    FALSETOKEN  shift, and go to state 3
    NEW         shift, and go to state 6
    FUNCTION    shift, and go to state 85
    THIS        shift, and go to state 14
    DIVEQUAL    shift, and go to state 24
    NUMBER      shift, and go to state 25
    STRING      shift, and go to state 26
    IDENT       shift, and go to state 86
    '/'         shift, and go to state 30
    '('         shift, and go to state 31
    '{'         shift, and go to state 87
    '['         shift, and go to state 33

    Literal       go to state 39
    PrimaryExpr   go to state 40
    ArrayLiteral  go to state 41
    MemberExpr    go to state 88
    NewExpr       go to state 89
    FunctionExpr  go to state 77


state 7

  130 VariableStatement: VAR . VariableDeclarationList ';'
  131                  | VAR . VariableDeclarationList error
  132 VariableDeclarationList: . VariableDeclaration
  133                        | . VariableDeclarationList ',' VariableDeclaration
  134 VariableDeclaration: . IDENT
  135                    | . IDENT Initializer

    IDENT  shift, and go to state 90

    VariableDeclarationList  go to state 91
    VariableDeclaration      go to state 92


state 8

  151 ContinueStatement: CONTINUE . ';'
  152                  | CONTINUE . error
  153                  | CONTINUE . IDENT ';'
  154                  | CONTINUE . IDENT error

    error  shift, and go to state 93
    IDENT  shift, and go to state 94
    ';'    shift, and go to state 95


state 9

  182 FunctionDeclaration: FUNCTION . IDENT '(' ')' FunctionBody
  183                    | FUNCTION . IDENT '(' FormalParameterList ')' FunctionBody
  184 FunctionExpr: FUNCTION . '(' ')' FunctionBody
  185             | FUNCTION . '(' FormalParameterList ')' FunctionBody

    IDENT  shift, and go to state 96
    '('    shift, and go to state 97


state 10
